--- a/src/assets/sass/core/_setting.scss
+++ b/src/assets/sass/core/_setting.scss
@@ -65,8 +65,27 @@ $black:                 #2c2c2c;
 $blackLight:            #b6bbbe;
 $blackLighter:          #f7f7f7;
 
-
 $borderGray:            #e6eaec;
+
+//------------------------------------------------
+//vue4shop项目
+
+$black:                 #000 !default;
+$black3:            		#333 !default;
+$black6:            		#666 !default;
+$black9:              	#999 !default;
+$grayc:                 #ccc !default;
+$graye5:                #e5e5e5 !default;
+$white:                 #fff !default;
+$whitef1:               #f1f1f1 !default;
+$whitef5:               #f5f5f5 !default;
+
+$borderColor:           #eee !default;
+
+$green:									#3cc51f !default;
+$red:                   #f14646 !default;
+
+//------------------------------------------------
 
 // link
 //-----------------------------------------------------
