--- a/src/assets/sass/core/_mixin.scss
+++ b/src/assets/sass/core/_mixin.scss
@@ -527,6 +527,10 @@
   //  max-width:768px;
   //}
 }
+@mixin setMnWidth(){
+  max-width: 640px;
+  min-width: 300px;
+}
 
 //登录和注册界面按钮风格  ;
 @mixin btn($color,$font-size,$width,$height){
